# POO_AplicatieTransmitereTeme

1_SRD/: Aplicație pentru transmitere teme v2.docx  Aplicație pentru transmitere teme.docx
2_TP/: TestPlan.docx
3_Solution/: Cod client  Project Readme.md  kk.drawio
3_Solution/Client/: CMakeLists.txt  afterlogin.cpp  afterlogin.h  afterlogin.ui  afterloginadmin.cpp  afterloginadmin.h  afterloginadmin.ui  afterloginprofessor.cpp  afterloginprofessor.h  afterloginprofessor.ui  createhomework.cpp  createhomework.h  createhomework.ui  createuser.cpp  createuser.h  createuser.ui  deleteuser.cpp  deleteuser.h  deleteuser.ui  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp  test.h  test.ui  updateuser.cpp  updateuser.h  updateuser.ui  viewhomework.cpp  viewhomework.h  viewhomework.ui
3_Solution/Server+DB_Link/: Server+DB_Link.sln
3_Solution/Server+DB_Link/Server+DB_Link/: Database.cpp  Database.h  File.h  Homework.cpp  Homework.h  Server+DB_Link.vcxproj  Server+DB_Link.vcxproj.filters  User.h  serverMain.cpp
3_Solution/Server+DB_Link/Server+DB_Link/x64/Debug/: Database.nativecodeanalysis.xml  Server+DB_Link.exe.recipe  Server+DB_Link.ilk  Server+DB_Link.vcxproj.FileListAbsolute.txt  serverMain.nativecodeanalysis.xml  vc143.idb
3_Solution/Server+DB_Link/Server+DB_Link/x64/Debug/Server+DB_Link.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Server+DB_Link.lastbuildstate  Server+DB_Link.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3_Solution/Server+DB_Link/Server+DB_Link/x64/Release/Server+DB_Link.tlog/: CL.command.1.tlog  Server+DB_Link.lastbuildstate
3_Solution/build-Client-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/: build.ninja
